[tool.poetry]
name = "test-common-framework"
version = "0.4.2"
description = "Common utility functions for reuse across projects"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "test_common_framework"}]
repository = "https://github.com/your-username/test_common_framework"
keywords = ["utilities", "common", "framework"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
