[tool.poetry]
name = "my-lambda-project"
version = "0.1.0"
description = "Sample Lambda project using test_common_framework"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# ============================================
# PRIVATE PACKAGE: test_common_framework
# Pulled from GitHub repository
# ============================================
# Option A: Pin to specific version tag (RECOMMENDED for production)
test-common-framework = {git = "https://github.com/amithasarath/test_common_framework.git", tag = "v0.1.5"}

# Option B: Use latest from main branch (for development)
# test-common-framework = {git = "https://github.com/amithasarath/test_common_framework.git", branch = "main"}

# ============================================
# PUBLIC PACKAGES: From PyPI
# ============================================
requests = "^2.31.0"
watchtower = "^3.0.1"
opencv-python-headless = "^4.8.0"
boto3 = "^1.34.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
