[tool.poetry]
name = "my-lambda-project"
version = "0.1.0"
description = "Sample Lambda project using test_common_framework"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# ============================================
# LAYER 1: PyPI packages (public)
# These go into: pypi-dependencies-layer
# Rarely changes - rebuild only when versions updated
# ============================================
[tool.poetry.group.pypi]
optional = true

[tool.poetry.group.pypi.dependencies]
requests = "^2.31.0"
watchtower = "^3.0.1"
opencv-python-headless = "^4.8.0"
boto3 = "^1.34.0"
pydantic = "^2.5.0"

# ============================================
# LAYER 2: test_common_framework (private GitHub)
# These go into: framework-layer
# Rebuild when framework version changes
# ============================================
[tool.poetry.group.framework]
optional = true

[tool.poetry.group.framework.dependencies]
# ----------------------------------------
# Choose ONE option below (uncomment only one):
# ----------------------------------------

# OPTION 1: Stable tag (RECOMMENDED for production)
test-common-framework = {git = "https://github.com/org/test_common_framework.git", tag = "v0.1.5"}

# OPTION 2: Dev branch - for testing alpha versions (e.g., 0.3.2-alpha.1)
# test-common-framework = {git = "https://github.com/org/test_common_framework.git", branch = "dev"}

# OPTION 3: Stg branch - for testing beta versions (e.g., 0.3.2-beta.1)
# test-common-framework = {git = "https://github.com/org/test_common_framework.git", branch = "stg"}

# OPTION 4: Feature branch - for testing feature versions (e.g., 0.3.2-feature.1)
# test-common-framework = {git = "https://github.com/org/test_common_framework.git", branch = "feature/your-feature-name"}

# OPTION 5: Main branch - latest stable (auto-updates, less predictable)
# test-common-framework = {git = "https://github.com/org/test_common_framework.git", branch = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
